2006-01-19  Martin Hunt  <hunt@redhat.com>

	* pmap-gen.c (_stp_pmap_get): Fix bug where old data
	from agg map could be returned after element was deleted.

2006-01-16  Josh Stone  <joshua.i.stone@intel.com>

	* stat.c (_stp_stat_clear): add a function that just
	clears a Stat, so we can use delete in the translator.

2006-01-16  Martin Hunt  <hunt@redhat.com>

	* map.c (_stp_pmap_agg): Return NULL when aggregation
	fails.

2006-01-15  Frank Ch. Eigler  <fche@elastic.org>

	* io.c (_stp_exit): Revert.

2006-01-10  Martin Hunt  <hunt@redhat.com>

	* io.c (_stp_exit): set STAP_SESSION_STOPPING.

2006-01-03  Frank Ch. Eigler  <fche@redhat.com>

	* io.c (_stp_softerror): New function.

2005-12-14  Martin Hunt  <hunt@redhat.com>

	* pmap-gen.c (_stp_pmap_new_*): Initialize lock.
	(_stp_pmap_set_*): Lock map while in use.
	(_stp_pmap_add_*): Lock map while in use.	
	(_stp_pmap_get_cpu): Ditto.
	(_stp_pmap_get): Lock each per-cpu map.
	
	* map-gen.c: Define and use NULLRET for a NULL return value.
	* map.c (_stp_pmap_clear): New function.
	(_stp_pmap_agg): Lock each per-cpu map as
	it gets aggregated.

2005-12-13  Martin Hunt  <hunt@redhat.com>

	* map.c (_stp_map_sortn): Set a limit of 30 for n.  Automatically
	call _stp_map_sort() if more is requested.

2005-12-08  Martin Hunt  <hunt@redhat.com>

	* map.c (_new_map_create): Only increment map size if a node
	was moved off the free list.
	(_stp_map_size): New function.
	(_stp_pmap_size): New function.	

2005-12-07  Martin Hunt  <hunt@redhat.com>
	 PR1923
	* map.h (struct map_root): Remove membuf.
	(struct pmap): Define.
	(PMAP): Declare.

	* map.c (_stp_map_init): Use kmalloc() to allocate individual
	nodes instead of using vmalloc() to allocate one big chunk.
	(_stp_map_new): Use kmalloc. 
	(_stp_pmap_new): Use kmalloc. Return a PMAP.
	(__stp_map_del): New function. Free all the nodes in a map.
	(_stp_map_del): Call __stp_map_del() then free map struct.
	(_stp_pmap_del): Takes a PMAP. Calls __stp_map_del() for